server/error_utf8.log
node : file:///C:/My%20Work/Clg%20Proj/CampusCare/
server/src/controllers/authController.js:254
At line:1 char:1
+ node src/server.js 2>&1 | Out-File -Encoding 
utf8 error_utf8.log
+ ~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (file 
   :///C:/My%2...ntroller.js:254:String) [], Rem  
  oteException
    + FullyQualifiedErrorId : NativeCommandError
 
<<<<<<< HEAD
^^

SyntaxError: Unexpected token '<<'
    at compileSourceTextModule 
(node:internal/modules/esm/utils:338:16)
    at ModuleLoader.moduleStrategy 
(node:internal/modules/esm/translators:102:18)
    at #translate 
(node:internal/modules/esm/loader:468:12)
    at ModuleLoader.loadAndTranslate 
(node:internal/modules/esm/loader:515:27)

Node.js v22.14.0
